# healthcare-planning-system

./: Dockerfile-humble  Dockerfile-planutils  LICENSE  README.md
docs/: NOTES.md
p1/: domain.pddl  p1_0.pddl  p1_0.plan  p1_1.pddl  p1_1.plan  p1_2.pddl  p1_2.plan  p1_3.pddl  p1_3.plan
p2/: domain.pddl  p2_0.pddl  p2_0.plan  p2_1.pddl  p2_1.plan
p2/cost_sensitive/: domain.pddl  p_cost_sensitive.pddl  p_cost_sensitive.plan
p2/numeric/: README.md  domain.pddl  p_numeric.pddl  p_numeric.plan
p3/: domain.hddl  p3_0  p3_0.hddl  p3_1  p3_1.hddl
p4/: domain.pddl  p4_0.pddl  p4_0.plan  p4_1.pddl  p4_1.plan
p5/: CMakeLists.txt  package.xml
p5/launch/: commands  p5_launch.py
p5/pddl/: domain.pddl  p5_0.pddl
p5/src/: deliver_patient_node.cpp  deliver_supply_node.cpp  drop_down_1st_box_node.cpp  drop_down_2nd_box_node.cpp  drop_down_3rd_box_node.cpp  drop_down_patient_node.cpp  fill_box_node.cpp  move_helper_bot_alone_node.cpp  move_helper_bot_patient_node.cpp  move_worker_bot_alone_node.cpp  move_worker_bot_with_1_box_node.cpp  move_worker_bot_with_2_boxes_node.cpp  move_worker_bot_with_3_boxes_node.cpp  pick_up_1st_box_node.cpp  pick_up_2nd_box_node.cpp  pick_up_3rd_box_node.cpp  pick_up_patient_node.cpp
